--- a/style.css
+++ b/style.css
@@ -1,32 +1,30 @@
-body {font-family: arial;}
-
-nav#horz1 ul {
+nav#main-navbar ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
-  overflow: hidden
+  overflow: hidden;
   }
   
-nav#horz1 ul li {
+nav#main-navbar ul li {
   float: left;
   margin: 0 15px;
   }
 
-nav#horz1 ul li a {  
+nav#main-navbar ul li a {  
   display: block;
-  background-color: rgb(7, 83, 159);
+  background-color: blue;
   color: #fff;
   font-weight: bold;
-  text-decoration: none;
+  text-decoration: underline overline;
   text-align: center;
-  width: 100px;
+  width: 100%;
   padding: 10px 0px 8px 0px;
   border-radius: 4px;
   }
 
-nav#horz1 ul li a:hover {  
-  background-color: rgb(54, 150, 247)
-  color: rgb(215, 221, 227)
+nav#main-navbar ul li a:hover {  
+  background-color: blue;
+  color: #fff;
   border-radius: 20px;
   text-transform: uppercase;
   }
