--- a/style.css
+++ b/style.css
@@ -1,30 +1,32 @@
 nav#main-navbar ul {
   list-style-type: none;
+  float: left;
   padding: 0;
   margin: 0;
   overflow: hidden;
+  position: relative;
   }
   
 nav#main-navbar ul li {
   float: left;
-  margin: 0 15px;
+  position: relative;
+  left: 50%;
   }
 
 nav#main-navbar ul li a {  
+  float: left;
+  position: relative;
+  right: 50%;
   display: block;
   background-color: blue;
   color: #fff;
-  font-weight: bold;
-  text-decoration: underline overline;
-  text-align: center;
+  text-decoration: none;
   width: 100%;
-  padding: 10px 0px 8px 0px;
-  border-radius: 4px;
+  padding: 10px 20px;
   }
 
 nav#main-navbar ul li a:hover {  
-  background-color: blue;
-  color: #fff;
-  border-radius: 20px;
-  text-transform: uppercase;
+  display: block;
+  background-color: #000;
+  text-decoration: underline overline;
   }
