--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,3 +30,29 @@ nav#main-navbar ul li a:hover {
   background-color: #000;
   text-decoration: underline overline;
   }
+  
+nav#sidebar ul {
+  position: fixed;
+  list-style-type: none;
+  padding: 0;
+  }
+  
+nav#sidebar ul li {
+  right: 0%;
+  }
+
+nav#sidebar ul li a {  
+  display: block;
+  background-color: red;
+  color: #fff;
+  text-decoration: none;
+  text-align+ center;
+  height: 100%
+  width: 20%;
+  padding: 15x 0px;
+  }
+
+nav#sidebar ul li a:hover {  
+  background-color: #000;
+
+  }
