--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,4 @@
-nav#main-navbar ul {
+nav#navbar-container ul {
   float: left;
   position: relative;
   list-style-type: none;
@@ -7,14 +7,14 @@ nav#main-navbar ul {
   overflow: hidden;
   }
   
-nav#navbar-container ul li {
+nav#main-navbar ul li {
   float: left;
   position: relative;
   left: 50%;
   right: 50%;
   }
 
-nav#navbar-container ul li a {  
+nav#main-navbar ul li a {  
   float: left;
   position: relative;
   display: block;
@@ -25,7 +25,7 @@ nav#navbar-container ul li a {
   padding: 10px 20px;
   }
 
-nav#navbar-container ul li a:hover {  
+nav#main-navbar ul li a:hover {  
   display: block;
   background-color: #000;
   text-decoration: underline overline;
