--- a/CSS/style.css
+++ b/CSS/style.css
@@ -46,7 +46,7 @@ nav#sidebar ul li a {
   background-color: red;
   color: #fff;
   text-decoration: none;
-  text-align+ center;
+  text-align: center;
   height: 100%
   width: 20%;
   padding: 15x 0px;
