--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,10 +1,15 @@
-nav#navbar-container ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  overflow: hidden;
+nav#main-navbar {
+  background-color: blue;
   float: left;
   position: relative;
+  }
+
+nav#navbar-container ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+
   }
   
 nav#main-navbar ul li {
@@ -12,6 +17,7 @@ nav#main-navbar ul li {
   position: relative;
   left: 50%;
   right: 50%;
+  width: 100%;
   }
 
 nav#main-navbar ul li a {  
@@ -19,7 +25,6 @@ nav#main-navbar ul li a {
   background-color: blue;
   color: #fff;
   text-decoration: none;
-  width: 100%;
   padding: 10px 20px;
   float: left;
   position: relative;
@@ -34,7 +39,6 @@ nav#main-navbar ul li a:hover {
 nav#sidebar-container ul {
   list-style-type: none;
   padding: 0;
-
   }
   
 nav#sidebar ul li {
