--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,6 +16,7 @@ nav#main-navbar ul li {
 
 nav#main-navbar ul li a {  
   display: block;
+  background-color: blue;
   padding: 10px 20px;
   color: #fff;
   text-decoration: none;
