Went back to original

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,7 +3,7 @@ nav#navbar-container	 {
   position: relative;
   }
 
-nav#navbar-container ul {
+nav#main-navbar ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
