changed to sidebar-container

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,7 +34,7 @@ nav#main-navbar ul li a:hover {
   position: relative;
   }
   
-nav#sidebar {
+nav#sidebar-container {
   background-color: #000;
   position: fixed;
   }
