--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,6 @@
 nav#main-navbar {
   background-color: #000;
-  position: relative;
-  }
+  position: relative;}
 
 nav#main-navbar ul {
   list-style-type: none;
@@ -45,8 +44,7 @@ nav#sidebar-container ul {
   }
   
 nav#sidebar-container ul li {
-  right: 0%;
-  padding: 15x 0px;
+   padding: 15x 0px;
   }
 
 nav#sidebar-container ul li a {  
@@ -55,6 +53,7 @@ nav#sidebar-container ul li a {
   color: #fff;
   text-decoration: none;
   text-align: center;
+  right: 0%;
   width: 20%; 
   height: 100%
   }
