--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,7 @@
 nav#main-navbar {
   background-color: #000;
-  position: relative;}
+  position: relative;
+  }
 
 nav#main-navbar ul {
   list-style-type: none;
@@ -33,9 +34,8 @@ nav#main-navbar  ul li a:hover {
   position: relative;
   }
   
-nav#sidebar-container {
+nav#sidebar {
   background-color: #000;
-  position: fixed;
   }
     
 nav#sidebar-container ul {
@@ -53,6 +53,7 @@ nav#sidebar-container ul li a {
   color: #fff;
   text-decoration: none;
   text-align: center;
+  position: fix;
   right: 0%;
   width: 20%; 
   height: 100%
