--- a/CSS/style.css
+++ b/CSS/style.css
@@ -33,12 +33,8 @@ nav#main-navbar  ul li a:hover {
   float: left;
   position: relative;
   }
-  
-nav#sidebar-container {
-  background-color: #000;
-  }
     
-nav#sidebar ul {
+nav#sidebar-container ul {
   list-style-type: none;
   padding: 0;
   }
@@ -57,5 +53,9 @@ nav#sidebar-container ul li a {
   right: 0%;
   width: 20%; 
   height: 100%
+  }
+  
+nav#sidebar-container ul li a:hover {  
+  background-color: #000;
   }
 
