--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,24 +34,24 @@ nav#main-navbar ul li a:hover {
   position: relative;
   }
 
-nav#sidebar-container {
+nav#sidebar {
   background-color: #000;
   position: fix;
   }
  
-nav#sidebar ul {
+nav#sidebar-container ul {
   list-style-type: none;
   padding: 0;
   }
   
-nav#sidebar ul li {
+nav#sidebar-container ul li {
   padding: 15x 0px;
   right: 0%;
   width: 20%; 
   height: 100%;
   }
 
-nav#sidebar ul li a {  
+nav#sidebar-container ul li a {  
   display: block;
   background-color: red;
   color: #fff;
