--- a/CSS/style.css
+++ b/CSS/style.css
@@ -39,24 +39,27 @@ nav#sidebar {
   position: fix;
   }
  
-nav#sidebar-container ul {
+nav#sidebar ul {
   list-style-type: none;
   padding: 0;
+  right: 0%;
   }
   
-nav#sidebar-container ul li {
+nav#sidebar ul li {
   padding: 15x 0px;
-  right: 0%;
   width: 20%; 
   height: 100%;
   }
 
-nav#sidebar-container ul li a {  
+nav#sidebar ul li a {  
   display: block;
   background-color: red;
   color: #fff;
   text-decoration: none;
   text-align: center;
+  position: fix;
   }
   
-
+nav#sidebar ul li a:hover {  
+  background-color: #000;
+  }
