--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,7 +27,7 @@ nav#main-navbar  ul li a {
   width: 100%;
   }
 
-nav#main-navbar ul li a:hover {  
+nav#onpage ul li a:hover {  
   display: block;
   text-decoration: underline overline;
   float: left;
@@ -40,7 +40,7 @@ nav#sidebar ul {
   }
   
 nav#sidebar ul li {
-  padding: 15x 0px;
+  padding: 15x 0px;  
   }
 
 nav#sidebar ul li a {  
@@ -50,8 +50,11 @@ nav#sidebar ul li a {
   text-decoration: none;
   text-align: center;
   position: fix;
+  right: 0%;
+  height: 100%;
+  width: 20%;
   }
   
-nav#sidebar ul li a:hover {  
+nav#onpage ul li a:hover {  
   background-color: #000;
   }
