putting float back to hover

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,6 @@ nav#main-navbar ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  float: left;
    }
   
 nav#main-navbar ul li {
@@ -32,6 +31,9 @@ nav#main-navbar ul li a:hover {
   text-decoration: underline overline;
   position: relative;
   background-color: #000;
+    left: 50%;
+  right: 50%;
+  width: 100%;
   }
  
 nav#sidebar ul {
