--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,7 +23,7 @@ nav#main-navbar  ul li a {
   position: relative;
   }
 
-nav#main-navbar ul li a:hover {  
+nav#onpage ul li a:hover {  
   display: block;
   text-decoration: underline overline;
   position: relative;
