--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,6 +30,7 @@ nav#main-navbar ul li a:hover {
   text-decoration: underline overline;
   position: relative;
   background-color: #000;
+  float: left;
   }
  
 nav#sidebar ul {
