--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,6 +11,7 @@ nav#main-navbar ul {
   
 nav#main-navbar ul li {
   float: left;
+  position: relative;
   padding: 10px 20px;
   width: 100%;
   right: 50%;
