--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,6 @@
 nav#main-navbar {
-  background-color: blue; 
+  background-color: blue;
+  position: relative;
   }
 
 nav#main-navbar ul {
@@ -10,13 +11,11 @@ nav#main-navbar ul {
   }
   
 nav#main-navbar ul li {
-  float: left  
-  padding: 10px 20px;
+  float: left
   }
 
 nav#main-navbar  ul li a {  
   display: block;
-  background-color: #000;
   color: #fff;
   float: left;
   text-decoration: none;
@@ -24,13 +23,15 @@ nav#main-navbar  ul li a {
   width: 100%;
   left: 50%;
   right: 50%;
-    }
+  padding: 10px 20px;
+  }
 
 nav#main-navbar ul li a:hover {  
   display: block;
   text-decoration: underline overline;
   position: relative;
-   float: left;
+  background-color: #000;
+  float: left;
   }
  
 nav#sidebar ul {
