--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,6 +12,7 @@ nav#main-navbar ul {
 nav#main-navbar ul li {
   float: left
   position: relative;
+  right: 50%;
   }
 
 nav#main-navbar  ul li a {  
@@ -36,7 +37,8 @@ nav#main-navbar ul li a:hover {
  
 nav#sidebar ul {
   list-style-type: none;
-  padding: 0;
+  padding: 0;  
+  color: red;
   }
   
 nav#sidebar ul li {
@@ -45,7 +47,7 @@ nav#sidebar ul li {
   }
 
 nav#sidebar ul li a {  
-  display: bloc olor: red;
+  display: block;
   color: #fff;
   text-decoration: none;
   text-align: center; 
