Added right to a

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,12 +17,12 @@ nav#main-navbar  ul li a {
   display: block;
   color: #fff;  
   padding: 10px 20px;
- 
   float: left;
   text-decoration: none;
   position: relative;
   width: 100%;
   left: 50%;
+  right: 50%;
   }
 
 nav#main-navbar ul li a:hover {  
