--- a/CSS/style.css
+++ b/CSS/style.css
@@ -44,7 +44,7 @@ nav#sidebar ul li {
   position: fix;
   }
 
-nav#sidebar ul li a {  
+nav#sidebar-container ul li a {  
   display: block;
   color: #fff;
   text-decoration: none;
