--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,7 @@ nav#main-navbar {
   background-color: blue;
   }
 
-nav#main-navbar ul {
+#navbar-container ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
