--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,7 +9,7 @@ nav#main-navbar {
   overflow: hidden;
   }
   
-#onpage ul li {
+nav#main-navbar ul li {
   float: left
   }
 
@@ -25,7 +25,7 @@ nav#main-navbar  ul li a {
   right: 50%;
   }
 
-#onpage ul li a:hover {  
+#navbar-container ul li a:hover {  
   display: block;
   text-decoration: underline overline;
   position: relative;
