--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,7 @@ nav#main-navbar {
   background-color: blue;
   }
 
-#navbar-container ul {
+nav#main-navbar ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -25,7 +25,7 @@ nav#main-navbar  ul li a {
   right: 50%;
   }
 
-#navbar-container ul li a:hover {  
+nav#main-navbar ul li a:hover {  
   display: block;
   text-decoration: underline overline;
   position: relative;
