--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,7 +25,7 @@ nav#main-navbar  ul li a {
   right: 50%;
   }
 
-nav#main-navbar ul li a:hover {  
+#onpage ul li a:hover {  
   display: block;
   text-decoration: underline overline;
   position: relative;
@@ -54,6 +54,6 @@ nav#main-navbar ul li a:hover {
   width: 20%;
   }
   
-#sidebar-container ul li a:hover {  
+#sideba ul li a:hover {  
   background-color: #000;
   }
