--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,7 +25,7 @@ nav#main-navbar  ul li a {
   right: 50%;
   }
 
-nav#main-navbar ul li a:hover {  
+#onpage ul li a:hover {  
   display: block;
   text-decoration: underline overline;
   position: relative;
