--- a/CSS/style.css
+++ b/CSS/style.css
@@ -58,6 +58,6 @@ nav#main-navbar ul li a:hover {
   background-color: #000;
   }
   
-#sidebar li a:hover {  
+#sidebar-container li a:hover {  
   color: #fff;
   }
