--- a/CSS/style.css
+++ b/CSS/style.css
@@ -47,7 +47,7 @@ nav#main-navbar ul li a:hover {
   padding: 0;
   }
   
-#sidebar-container ul li {
+#sidebar ul li {
   padding: 15x 0px;  
   }
 
