Change id to side bar

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,7 +42,7 @@ nav#main-navbar ul li a:hover {
   width: 20%;
   }
   
-#sidebar-container ul {
+#sidebar ul {
   list-style-type: none;
   padding: 0;
   }
