moved padding to ul

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -45,6 +45,7 @@ nav#main-navbar ul li a:hover {
 #sidebar ul {
   list-style-type: none;
   padding: 0;
+  padding: 15x 0px;  
   }
   
 #sidebar ul li {
