Changed id back to #sidebar-container

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,7 +42,7 @@ nav#main-navbar ul li a:hover {
   width: 20%;
   }
   
-#sidebar ul {
+#sidebar-container ul {
   list-style-type: none;
   padding: 0;
   padding: 15x 0px;  
