Changed id to onpage

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,7 +25,7 @@ nav#main-navbar  ul li a {
   position: relative;
   }
 
-nav#main-navbar ul li a:hover {  
+#onpage ul li a:hover {  
   display: block;
   text-decoration: underline overline;
   position: relative;
@@ -47,7 +47,7 @@ nav#main-navbar ul li a:hover {
   padding: 0;
   }
   
-#sidebar-container ul li {
+#sidebar ul li {
   padding: 15x 0px;  
   }
 
