--- a/CSS/style.css
+++ b/CSS/style.css
@@ -57,6 +57,6 @@ nav#main-navbar ul li a:hover {
   color: #fff;
   }
   
-#sidebar ul li a:hover {  
+#sidebar-container ul li a:hover {  
   background-color: #000;
   }
