changed to sidebar

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,7 +42,7 @@ nav#main-navbar ul li a:hover {
   padding: 15x 0px;  
   }
   
-#sidebar-container ul {
+#sidebar ul {
   list-style-type: none;
   padding: 0;
   }
