Added #sidebar-container and moved display block and padding to it

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,6 +5,7 @@ nav#main-navbar {
   right: 50%;
   }
 
+
 nav#main-navbar ul {
   list-style-type: none;
   margin: 0;
@@ -39,9 +40,13 @@ nav#main-navbar ul li a:hover {
   right: 0%;
   height: 100%;
   width: 20%;
-
   }
   
+#sidebar-container  {
+  display: block;  
+  padding: 15x 0px;  
+  }
+
 #sidebar ul {
   list-style-type: none;
   padding: 0;
@@ -52,10 +57,10 @@ nav#main-navbar ul li a:hover {
   }
 
 #sidebar ul li a {  
-  display: block;
+
   text-decoration: none;
   color: #fff;
-  padding: 15x 0px;  
+
   }
   
 #sidebar ul li a:hover {  
