--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,7 +34,7 @@ nav#main-navbar ul li a:hover {
   float: left;
   }
  
- #sidebar-container {
+ #sidebar {
   position: fixed;
   background-color: red;
   right: 0%;
@@ -42,22 +42,22 @@ nav#main-navbar ul li a:hover {
   width: 20%;
   }
   
-#sidebar-container ul {
+#sidebar ul {
   list-style-type: none;
   padding: 0;
   }
   
-#sidebar-container ul li {
+#sidebar ul li {
   padding: 15x 0px;  
   }
 
-#sidebar-container ul li a {  
+#sidebar ul li a {  
   display: block;
-  text-decoration: none;
   color: #fff;
+  text-decoration: none;
   text-align: center; 
   }
   
-#sidebar-container ul li a:hover {  
+#sidebar ul li a:hover {  
   background-color: #000;
   }
