--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,12 +42,12 @@ nav#main-navbar ul li a:hover {
   width: 20%;
   }
   
-#sidebar ul {
+ #sidebar-container ul {
   list-style-type: none;
   padding: 0;
   }
   
-#sidebar ul li {
+ #sidebar-container ul li {
   padding: 15x 0px; 
   }
 
