Changed hover to  #sidebar-container

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -59,6 +59,6 @@ nav#main-navbar ul li a:hover {
 
   }
   
-#sidebar ul li a:hover {  
+ #sidebar-container ul li a:hover {  
   background-color: #000;
   }
