--- a/CSS/style.css
+++ b/CSS/style.css
@@ -29,6 +29,7 @@ nav#main-navbar  ul li a {
   color: #fff; 
   padding: 10px 20px;
   text-decoration: none;
+  display: block;
   }
 
 nav#main-navbar ul li a:hover {  
