--- a/CSS/style.css
+++ b/CSS/style.css
@@ -58,7 +58,7 @@ nav#main-navbar ul li a:hover {
   display: block;
   color: #fff;
   text-decoration: none;
-  padding: 15x 0px;
+  padding: 15px 0;
   }
   
  #sidebar ul li a:hover {  
